tests/parse-fail/vec_no_size.fl.0.exp
Error: vec_no_size.fl(3,25): Expected vector size integer, but got '}' 
pub mod vec_no_size {
    pub struct VecNoSize {
        pub v : {int .. };
                        ^  
    }
}
